test: http test files

--- a/docs/架构约定.md
+++ b/docs/架构约定.md
@@ -9,3 +9,5 @@ kitex_gen 每个服务的 kitex_gen 统一放置目录
 common: 公共通用代码
 
 route: 网关代码
+
+test/http-fetch: 测试代码，使用 .http 编写，用 VSCode 的 REST Client 或者 JB 的插件即可运行
