--- a/docs/架构约定.md
+++ b/docs/架构约定.md
@@ -2,6 +2,8 @@ docs: 放文档
 
 idl: thrift文件，目前统一放一起
 
+idl/api: 描述 route 的 HTTP 接口的 thrift 文件
+
 rpc: rpc服务,下面会有若干个 xx-service， 脚手架由 kitex 生成
 
 kitex_gen 每个服务的 kitex_gen 统一放置目录
